All tests - incomplete - kernel BUG at drivers/gpu/drm/drm_mm.c:635!
<2> [542.297685] kernel BUG at drivers/gpu/drm/drm_mm.c:635!
<4> [542.297723] invalid opcode: 0000 [#1] PREEMPT SMP NOPTI
<4> [542.297725] CPU: 0 PID: 3594 Comm: kms_big_fb Tainted: G U 5.13.0-rc7-CI-CI_DRM_10282+ #1
<4> [542.297728] Hardware name: Intel Corporation Alder Lake Client Platform/AlderLake-P LP5 RVP, BIOS ADLPFWI1.R00.2127.A00.2103261115 03/26/2021
<4> [542.297729] RIP: 0010:drm_mm_remove_node+0x2e1/0x360
<4> [542.297733] Code: 49 10 e9 2a fe ff ff 48 85 c0 0f 85 1b fe ff ff e9 1b ff ff ff 49 89 85 c8 00 00 00 e9 ee fd ff ff 48 89 41 10 e9 e5 fd ff ff <0f> 0b 0f 0b 48 8b 43 40 48 89 07 48 83 e0 fc 74 14 48 8b 48 10 49
<4> [542.297735] RSP: 0018:ffffc90003a4fa28 EFLAGS: 00010246
<4> [542.297737] RAX: 0000000000000000 RBX: ffff88812f52a0b0 RCX: 0000000000000001
<4> [542.297738] RDX: 0000000080000001 RSI: 0000000000000000 RDI: ffff88812f528ee8
<4> [542.297739] RBP: ffff88812f528ee8 R08: ffff888114e5dcb0 R09: 00000000fffffffe
<4> [542.297740] R10: ffffc90003a4fa58 R11: 00000000c0710bfc R12: 0000000010000000
<4> [542.297741] R13: ffff88812f528d98 R14: 00000000021c0000 R15: 0000000000000004
<4> [542.297742] FS: 00007f0a76659e40(0000) GS:ffff8882a7000000(0000) knlGS:0000000000000000
<4> [542.297744] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [542.297745] CR2: 00007f0a76658fe0 CR3: 00000001011b2002 CR4: 0000000000770ef0
<4> [542.297746] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
<4> [542.297746] DR3: 0000000000000000 DR6: 00000000ffff07f0 DR7: 0000000000000400
<4> [542.297747] PKRU: 55555554
<4> [542.297748] Call Trace:
<4> [542.297750] i915_gem_stolen_remove_node+0x1e/0x30 [i915]
<4> [542.297827] intel_fbc_enable+0x2a9/0x740 [i915]
<4> [542.297905] intel_update_crtc+0x93/0x3a0 [i915]
<4> [542.297980] ? _raw_spin_unlock_irq+0x1f/0x40
<4> [542.297983] skl_commit_modeset_enables+0x149/0x530 [i915]
<4> [542.298056] intel_atomic_commit_tail+0x48d/0x1420 [i915]
<4> [542.298128] ? _raw_spin_unlock_irqrestore+0x50/0x60
<4> [542.298130] ? lockdep_hardirqs_on+0xbf/0x130
<4> [542.298133] ? __i915_sw_fence_complete+0x30/0x258 [i915]
<4> [542.298183] intel_atomic_commit+0x363/0x3e0 [i915]
<4> [542.298259] drm_mode_atomic_ioctl+0x8b3/0xab0
<4> [542.298263] ? drm_connector_init.cold.20+0x5a/0x5a
<4> [542.298267] ? drm_atomic_set_property+0xa40/0xa40
<4> [542.298270] drm_ioctl_kernel+0xa8/0xf0
<4> [542.298272] drm_ioctl+0x1e8/0x390
<4> [542.298273] ? drm_atomic_set_property+0xa40/0xa40
<4> [542.298276] ? find_held_lock+0x2d/0x90
<4> [542.298279] __x64_sys_ioctl+0x6a/0xa0
<4> [542.298283] do_syscall_64+0x39/0xb0
<4> [542.298285] entry_SYSCALL_64_after_hwframe+0x44/0xae
<4> [542.298288] RIP: 0033:0x7f0a75aa5317
<4> [542.298289] Code: b3 66 90 48 8b 05 71 4b 2d 00 64 c7 00 26 00 00 00 48 c7 c0 ff ff ff ff c3 66 2e 0f 1f 84 00 00 00 00 00 b8 10 00 00 00 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d 41 4b 2d 00 f7 d8 64 89 01 48
<4> [542.298291] RSP: 002b:00007ffc1f5f3448 EFLAGS: 00000246 ORIG_RAX: 0000000000000010
<4> [542.298292] RAX: ffffffffffffffda RBX: 00005651c4d840a0 RCX: 00007f0a75aa5317
<4> [542.298293] RDX: 00007ffc1f5f3490 RSI: 00000000c03864bc RDI: 0000000000000006
<4> [542.298294] RBP: 00007ffc1f5f3490 R08: 00005651c4de5dc0 R09: 0000000000000000
<4> [542.298295] R10: 0000000000000000 R11: 0000000000000246 R12: 00000000c03864bc
<4> [542.298296] R13: 0000000000000006 R14: 0000000000000000 R15: 00005651c4de2440
<4> [542.298298] Modules linked in: snd_hda_intel i915 snd_hda_codec_hdmi mei_hdcp x86_pkg_temp_thermal coretemp smsc75xx crct10dif_pclmul crc32_pclmul usbnet mii snd_intel_dspcfg snd_hda_codec snd_hwdep ghash_clmulni_intel snd_hda_core e1000e snd_pcm ptp pps_core mei_me mei ttm intel_lpss_pci prime_numbers [last unloaded: i915]
<4> [542.298314] ---[ end trace 8ffcda8af522c909